<resources>

    <string name="app_name">MyClassifiedAds</string>
    <string name="LogOut">Logout</string>
    <string name="Exit">Exit</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_sign_up2">SignUp</string>
    <string name="title_activity_user_choice">User Choice</string>
    <string name="title_activity_main_view">My ClassifiedAds</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="search_hint">Type and Search..</string>
    <string name="title_activity_search_result">My Classified Results</string>

    <string name="locateOnMap"><u>LOCATE ON MAP</u></string>
    <string name="upload"><u>Upload Pics</u></string>
    <string name="uploadSingle"><u>Upload Pic</u></string>
    <string name="profilePic"><u>Upload Profile Pic</u></string>
    <string name="forgotPassword"><u>Forgot Password?</u></string>
    <string name="action_settings">Settings</string>
    <string name="saleStatus">Select a status</string>
    <string name="conditionStatus">Select condition</string>
    <string name="responsibility"><b>Responsibility:</b></string>
    <string name="skills"><b>Skills:</b></string>

    <string-array name="status">
        <item>Sold</item>
        <item>ForSale</item>
    </string-array>
    <string-array name="conditions">
        <item>New</item>
        <item>Used</item>
    </string-array>
    <string-array name="jobTiming">
        <item>PartTime</item>
        <item>FullTime</item>
    </string-array>
    <string-array name="saleType">
        <item>ForSale</item>
        <item>Rent</item>
        <item>Lease</item>
    </string-array>

    <string name="title_activity_shop_signup">SignUp For Shop</string>
    <string name="title_activity_shop_signup2">SignUp For Shop</string>
    <string name="title_activity_org_signup">SignUp For Organization</string>
    <string name="title_activity_org_signup2">SignUp For Organization</string>
    <string name="title_activity_contacts_add">Add Contacts</string>
    <string name="title_activity_wanted_add">Add Wanted Ads</string>
    <string name="title_activity_sales_add">Add Sales Ads</string>
    <string name="title_activity_real_estate_add">Add RealEstate Ads</string>
    <string name="title_activity_job_add">Add Job Vacancy Ads</string>
    <string name="title_activity_contact_view_detail">Contact View Detail</string>
    <string name="title_view_on_map">Location on map</string>
    <string name="title_fragment_contactsinlist">All Contacts</string>
    <string name="title_fragment_contactsinmap">View in Map</string>
    <string name="title_fragment_wantedinlist">All Wanted list</string>
    <string name="title_fragment_wantedinmap">View in Map</string>
    <string name="title_activity_locate_on_map">Locate on Map</string>
    <string name="title_fragment_realestateinlist">All Real Estates</string>
    <string name="title_fragment_realestateinmap">View in map</string>
    <string name="title_fragment_topads">TOP ADS</string>
    <string name="title_fragment_newads">NEW ADS</string>
    <string name="title_fragment_mycontacts">CONTACTS</string>
    <string name="title_fragment_mywanted">WANTED</string>
    <string name="title_fragment_mysales">SALES</string>
    <string name="title_fragment_myrealestate">REAL ESTATE</string>
    <string name="title_fragment_myjobs">JOBS</string>

    <string name="title_section1"><b>ALL ADS</b></string>
    <string name="title_section2"><b>TOP ADS</b></string>
    <string name="title_section3"><b>NEW ADS</b></string>

    <string name="locinmap"><u>View on Map</u></string>
    <string name="comment"><u>Your comments here</u></string>
    <string name="title_activity_all_comments">All Comments</string>
    <string name="watchlist">Add to watchlist</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>


    <string name="hello_world">Hello world!</string>
    <string name="title_activity_real_estate_view_detail">Real Estate</string>
    <string name="title_activity_job_detail">JobDetailActivity</string>
    <string name="title_activity_sales_detail_view">SalesDetailView</string>
    <string name="title_activity_sales_all_comments">sales_all_comments</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_view_individual_detail">ViewIndividualDetail</string>
    <string name="title_activity_view_company_detail">ViewCompanyDetail</string>
    <string name="title_activity_view_shop_detail">ViewShopDetail</string>
    <string name="title_activity_my_contacts_wanted_edit">MyContactsWantedEditActivity</string>
    <string name="title_activity_my_sales_edit">MySalesEditActivity</string>
    <string name="title_activity_my_jobs_edit">MyJobsEditActivity</string>
    <string name="title_activity_my_realestate_edit">MyRealestateEditActivity</string>
    <string name="title_activity_my_watchlist">MyWatchlist</string>

    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>



</resources>
