<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/ll"
    android:layout_margin="10dp"
    android:orientation="vertical"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="ajsjbfdbfdsjbfjdsbfjdjfbj"
                android:layout_marginTop="10dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/job_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    card_view:cardCornerRadius="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp">

                    <ImageView
                        android:id="@+id/jobsImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </android.support.v7.widget.CardView>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/jobCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:textSize="14sp"
                        android:text="sdfdsfds"/>
                    <TextView
                        android:id="@+id/salary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="120000"
                        android:textColor="#ff0000"
                        android:textSize="14sp"
                        android:layout_marginTop="10dp"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="30dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="Posted by "

                            />
                        <TextView
                            android:id="@+id/username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:textColor="#0000ff"
                            android:text="sdfdsfds"
                            />


                    </LinearLayout>
                    <TextView
                        android:id="@+id/ad_postedDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="#000000"
                        android:layout_marginTop="10dp"
                        android:text="12/89/097"
                        />
                </LinearLayout>
</LinearLayout>
            <View
                android:id="@+id/baselines"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="#DADADC"
                />
            <TextView
                android:id="@+id/ad_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="sfdfdfdgafdgfdgfdfdfdkgnfgnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnn"
                android:textSize="14sp"
                />
            <View
                android:id="@+id/baselines1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="#DADADC"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/responsibility"
                android:textSize="14sp"
                />
            <TextView
                android:id="@id/responsibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="fsdfdsfdfddadgafgfdngjfngjfngjnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnn"
                android:textSize="14sp"
                android:layout_marginTop="10dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="#DADADC"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skills"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/skills"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="snfjnfjdsnjfdnfjdnfdnjf"
                android:textSize="14sp"
                android:layout_marginTop="10dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="#DADADC"
                />
            <TextView
                android:id="@id/jobTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5-10am"
                android:textSize="14sp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="horizontal" android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No. of Vaccancies:"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/vaccanyNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="#DADADC"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="For more info contact: "
                android:textSize="14sp"/>
            <TextView
                android:id="@id/contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="432234223"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="kknfsdnfjdsnjf@njnjnfg"
                android:textSize="14sp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="sfdsfdfds.com"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="kumaripati"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/viewOnMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/locinmap"
                android:textColor="#0000ff"
                android:textSize="14sp"
                android:layout_marginTop="5dp"/>
            <View
                android:id="@+id/baselines2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="#DADADC" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/comment"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comment"
                    android:layout_marginTop="10dp"
                    android:textColor="#0000ff"/>

            </LinearLayout>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/commentJob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="2dp"
                android:layout_marginTop="5dp"
                android:background="#ffffff"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="5dp">

                    <TextView
                        android:id="@+id/postedDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:layout_marginTop="2dp"
                        android:text="Posted Date: 12/08/10"/>

                    <TextView
                        android:id="@+id/comenterUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="#000000"
                        android:text="By ruchi"
                        android:layout_marginTop="2dp"/>

                    <TextView
                        android:id="@+id/myComments"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:background="#ffe3e1e5"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        />


                </LinearLayout>
            </android.support.v7.widget.CardView>

            <ImageView
                android:id="@+id/read_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/read_cmnt"
                android:layout_marginTop="10dp"/>



            </LinearLayout>
        </ScrollView>
    </LinearLayout>