<?xml version="1.0" encoding="utf-8"?>
<!--<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="580dp"
    android:layout_gravity="center">-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp">

            <HorizontalScrollView
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/horizontalScroll"
                android:background="#C6D7D2" >

                <LinearLayout
                    android:id="@+id/container"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="imageclick"/>
                    <ImageView
                        android:id="@+id/img2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="imageclick"/>
                    <ImageView
                        android:id="@+id/img3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="imageclick"/>
                    <ImageView
                        android:id="@+id/img4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="imageclick"/>
                    <ImageView
                        android:id="@+id/img5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="imageclick"/>
                    <ImageView
                        android:id="@+id/img6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="imageclick"/>
                    <ImageView
                        android:id="@+id/img7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="imageclick"/>
                    <ImageView
                        android:id="@+id/img8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="imageclick"/>
                    <ImageView
                        android:id="@+id/img9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="imageclick"/>
                    <ImageView
                        android:id="@+id/img10"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:onClick="imageclick"
                        android:background="#dadadc"/>

                </LinearLayout>

            </HorizontalScrollView>

            <TextView
                android:id="@+id/uploadPics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload"
                android:textSize="16sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:id="@+id/title"
                android:background="@drawable/shape_edittext"
                android:layout_marginTop="20dp"
                android:inputType="text"
                android:hint="Title.."
                android:textSize="16sp"
                android:paddingLeft="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Description:"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_marginTop="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/description"
                android:background="@drawable/shape_edittext"
                android:lines="8"
                android:inputType="textMultiLine"
                android:hint="Type here.."
                android:layout_marginTop="5dp"
                android:ems="10"
                android:gravity="top|left"
                android:cursorVisible="true"
                android:paddingLeft="5dp"
                android:textSize="16sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/shape_edittext"
                android:layout_marginTop="10dp"
                android:inputType="text"
                android:hint="Brand.."
                android:textSize="16sp"
                android:paddingLeft="5dp"
                android:id="@+id/salesBrand"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/shape_edittext"
                android:layout_marginTop="10dp"
                android:inputType="text"
                android:hint="Model No."
                android:textSize="16sp"
                android:paddingLeft="5dp"
                android:id="@+id/modelNo"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/shape_edittext"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:paddingLeft="5dp"
                android:id="@+id/salesPrice"
                android:hint="NPR."
                android:inputType="number" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:text="Status:"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:id="@+id/jobTime" />

                <Spinner
                    android:id="@+id/salesStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/jobTime"
                    android:prompt="@string/saleStatus"
                    android:entries="@array/status" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@drawable/shape_edittext"
                    android:layout_marginTop="10dp"
                    android:inputType="phone"
                    android:hint="ContactNo."
                    android:textSize="16sp"
                    android:paddingLeft="5dp"
                    android:layout_below="@+id/salesStatus"
                    android:id="@+id/salesContact"/>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:text="Condition:"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/salesContact"
                    android:id="@+id/condition"/>

                <Spinner
                    android:id="@+id/conditionList"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_below="@+id/salesContact"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/condition"
                    android:prompt="@string/conditionStatus"
                    android:entries="@array/conditions" />

            </RelativeLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/shape_edittext"
                android:layout_marginTop="10dp"
                android:inputType="text"
                android:hint="Used Time.."
                android:textSize="16sp"
                android:paddingLeft="5dp"
                android:id="@+id/usedTime"/>

            <Button
                android:layout_width="100dp"
                android:layout_height="34dp"
                android:text="Save"
                android:id="@+id/saveButton"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:background="@drawable/shape"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
